--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "dot-env": "^0.0.1",
+    "nestjs-zod": "^5.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.5"
