--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@prisma/client": "^6.15.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
     "dot-env": "^0.0.1",
+    "ms": "^2.1.3",
     "nestjs-zod": "^5.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
