--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "init-seed-data": "ts-node ./initScript",
+    "email:dev": "email dev",
+    "email:build": "email build",
+    "email:export": "email export",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -26,12 +29,15 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.15.0",
+    "@react-email/components": "0.5.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dot-env": "^0.0.1",
     "ms": "^2.1.3",
     "nestjs-zod": "^5.0.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.2",
     "rxjs": "^7.8.1",
@@ -54,6 +60,7 @@
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
     "prisma": "^6.15.0",
+    "react-email": "4.2.8",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
