--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "jsx": "react",
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
