--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.2",
     "rxjs": "^7.8.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
