--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dot-env": "^0.0.1",
+    "googleapis": "^159.0.0",
     "ms": "^2.1.3",
     "nestjs-zod": "^5.0.1",
     "react": "19.1.1",
