--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "init-seed-data": "ts-node ./initScript",
+    "create-permissions": "ts-node ./initScript/create-permissions" ,
     "email:dev": "email dev",
     "email:build": "email build",
     "email:export": "email export",
