--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.896.0",
     "@aws-sdk/lib-storage": "^3.896.0",
+    "@aws-sdk/s3-request-presigner": "^3.896.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
@@ -38,6 +39,7 @@
     "date-fns": "^4.1.0",
     "dot-env": "^0.0.1",
     "googleapis": "^159.0.0",
+    "mime-types": "^3.0.1",
     "ms": "^2.1.3",
     "nestjs-zod": "^5.0.1",
     "otpauth": "^9.4.1",
@@ -57,6 +59,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
