--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -41,6 +41,7 @@
     "googleapis": "^159.0.0",
     "mime-types": "^3.0.1",
     "ms": "^2.1.3",
+    "nestjs-i18n": "^10.5.1",
     "nestjs-zod": "^5.0.1",
     "otpauth": "^9.4.1",
     "react": "19.1.1",
