--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "init-seed-data": "ts-node ./initScript",
     "create-permissions": "ts-node ./initScript/create-permissions",
+    "test-scripts": "ts-node ./initScript/test-scripts.ts",
     "email:dev": "email dev",
     "email:build": "email build",
     "email:export": "email export",
@@ -32,7 +33,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.16.3",
     "@react-email/components": "0.5.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
@@ -70,7 +71,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.16.2",
+    "prisma": "^6.16.3",
     "react-email": "4.2.8",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
