--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
     "prisma": "^6.16.3",
+    "prisma-json-types-generator": "^3.6.2",
     "react-email": "4.2.8",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
